# luxdb

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG  Dockerfile  LICENSE  README.md  bandit.yaml  dev-requirements.in  dev-requirements.txt  luxdb-server  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
docs/: conf.py  index.rst  usage.rst
luxdb/: client.py  commands.py  connection.py  exceptions.py  index.py  knn_store.py  server.py  sync_client.py
src/luxdb/: client.py  commands.py  connection.py  exceptions.py  index.py  knn_store.py  server.py  sync_client.py
tests/: __init__.py  test_client.py  test_commands.py  test_index.py  test_knn_store.py  test_multi_connections.py  test_sync_client.py
