[metadata]
name = luxdb
version = 0.0.4
author = Sandro Covo
author_email = sandro@sandrocovo.ch
description = Store multidimensional vectors and quickly search nearest neighbors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/sacovo/luxdb
project_urls =
    Bug Tracker = https://gitlab.com/sacovo/luxdb/-/issues
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Database :: Database Engines/Servers
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords='machine learning, encodings, vectors'

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where = src

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True


[yapf]
based_on_style = pep8
column_limit = 120
